samples/_failures_safe/1761401288_551f61_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c4c0e832.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_c4c0e832.c:145:9: error: expected declaration or statement at end of input
  145 |         lexer->column++;
      |         ^~~~~
./samples/SAFE/__tmp_c4c0e832.c:145:9: error: expected declaration or statement at end of input
